[tool.poetry]
name = "cherpy"
version = "0.5.2"
description = "A rest api wrapper for the Cherwell Service management platform"
authors = ["Josh Sarver <josh.sarver@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.0"
attrs = "^24.2.0"
PyYAML = "^6.0.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
