[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    { name = "Josh Sarver", email = "josh.sarver@gmail.com" },
]
license = { text = "GNU GPLv3" }
requires-python = "<4.0,>=3.9"
dependencies = [
    "requests<3.0.0,>=2.32.0",
    "attrs<25.0.0,>=24.2.0",
    "PyYAML<7.0.0,>=6.0.2",
    "loguru<1.0.0,>=0.7.2",
    "click<9.0.0,>=8.1.7",
]
name = "cherpy"
version = "0.6.2"
description = "A rest api wrapper for the Cherwell Service management platform"
readme = "README.md"

[project.scripts]
search = "cherpy.cli:search_object_cli"
delete_objects = "cherpy.cli:delete_objects_cli"
update = "cherpy.cli:update_object_cli"
create = "cherpy.cli:create_object_cli"
run-onestep = "cherpy.cli:run_onestep_cli"
csm = "cherpy.cli:csm"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
]
